--- a/app/src/main/res/layout/recycler2.xml
+++ b/app/src/main/res/layout/recycler2.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/fragment_horizontal_recycler_view1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/fragment_horizontal_recycler_view">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="wrap_content" />
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
@@ -27,14 +25,13 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/fragment_horizontal_recycler_view4"
-        >
+        android:id="@+id/fragment_horizontal_recycler_view4">
     </android.support.v7.widget.RecyclerView>
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/fragment_horizontal_recycler_view5"
-        >
+        android:id="@+id/fragment_horizontal_recycler_view5">
     </android.support.v7.widget.RecyclerView>
-    </LinearLayout>
+
+</LinearLayout>
